2013-08-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el: Check existence of f in #'f.
	(byte-compile-callargs-warn): Use `push'.
	(byte-compile-arglist-warn): Ignore higher-order "calls".
	(byte-compile-file-form-autoload): Use `pcase'.
	(byte-compile-function-form): If quoting a symbol, check that it exists.

2013-08-07  Eli Zaretskii  <eliz@gnu.org>

	* progmodes/dos.el (dos-font-lock-keywords): Rename LINUX to UNIX
	and add a few popular commands found in batch files.
	(dos, dos-label-face, dos-cmd-help, dos-run, dos-run-args)
	(dos-mode): Doc fixes.

2013-08-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/dos.el (auto-mode-alist): Add entries for dos-mode.
	(dos-mode): Use setq-local.  Add space after "rem".
	(dos-mode-syntax-table): Don't use "w" for symbol chars.
	(dos-font-lock-keywords): Try to adjust font-lock rules accordingly.

2013-08-07  Arni Magnusson  <arnima@hafro.is>

	* progmodes/dos.el: New file.
	* generic-x.el (bat-generic-mode): Redefine as an obsolete alias to
	dos-mode.

2013-08-06  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el: Add new faces, and day-header-array.
	(calendar-weekday-header, calendar-weekend-header)
	(calendar-month-header): New faces.
	(calendar-day-header-construct): New function.
	(calendar-day-header-width): Also :set calendar-day-header-array.
	(calendar-american-month-header, calendar-european-month-header)
	(calendar-iso-month-header): Use calendar- faces.
	(calendar-generate-month):
	Use calendar-day-header-array for day headers; apply faces to them.
	(calendar-mode): Check calendar-font-lock-keywords non-nil.
	(calendar-abbrev-construct): Add optional maxlen argument.
	(calendar-day-name-array): Doc fix.
	(calendar-day-name-array, calendar-abbrev-length)
	(calendar-day-abbrev-array):
	Also :set calendar-day-header-array, and maybe redraw.
	(calendar-day-header-array): New option.  (Bug#15007)
	(calendar-font-lock-keywords): Set to nil and make obsolete.