@@ -1,5 +1,8 @@
 2013-08-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* progmodes/bat-mode.el: Rename from dos.el.  Use "bat-" prefix.
+	(dos-mode-help): Remove.  Use describe-mode (C-h m) instead.
+
 	* emacs-lisp/bytecomp.el: Check existence of f in #'f.
 	(byte-compile-callargs-warn): Use `push'.
 	(byte-compile-arglist-warn): Ignore higher-order "calls".
